--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body{
 .p-20left{
     padding: 0 20px;
 }
+
 .m-50top{
     margin-top: 50px;
 }
@@ -77,6 +78,8 @@ nav{
     margin-left: 10px;
 }
 /* MAIN */
+
+/* HERO */
 .hero-section{
     background-color: var(--bg-hero);
 }
@@ -102,6 +105,44 @@ h1{
     font-size: 2.5em;
 }
 
+/* SECTION PLANS */
+.title-section{
+    font-size: 2rem;
+}
+.billing-year{
+    margin-left: 40px;
+}
+.plans{
+    margin-top:80px;
+}
+.card-head{
+    padding:10px;
+    border: 2px solid var(--bordergrey)
+}
+h3{
+    font-size: 1.5rem;
+    padding-bottom: 10px;
+}
+.more{
+    display: inline-block;
+    color: grey;
+    margin-top: 10px;
+}
+.functionality{
+    flex-direction: column;
+}
+.card-head:first-child{
+    text-align: center;
+}
+.card-content{
+    flex-direction: column;
+    align-items: flex-start;
+    gap:50px;
+    padding: 30px;
+}
+.trial{
+    margin: auto;
+}
 /* FOOTER */
 footer{
     background-color: var(--bg-footer);
