add-section-partner

--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,14 @@ body{
     padding: 20px 0 0 0;
 }
 
+.p-100top{
+    padding-top: 100px;
+}
+
 .m-50top{
     margin-top: 50px;
 }
-.m-100top{
-    margin-top: 100px;
-}
+
 /* RULES */
 .container{
     max-width: 1200px;
@@ -143,7 +145,7 @@ h1{
 }
 h3{
     font-size: 1.5rem;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 .functionality{
     flex-direction: column;
@@ -179,6 +181,26 @@ hr{
     position: absolute;
     top: 30px;
     right: 30px;
+}
+
+/* SECTION PARTNER */
+.photo-box{
+    max-width: 55%;
+}
+.photo-box > img{
+    width: 100%;
+}
+.article{
+    max-width: 45%;
+    padding: 60px;
+}
+.article-text{
+    padding-bottom: 40px;
+}
+.bttn-partner{
+    color: black;
+    background-color: white;
+    border: 1px solid black;
 }
 /* FOOTER */
 footer{
